--- a/src/app/pages/main-tabs/usuarios/usuarios.page.html
+++ b/src/app/pages/main-tabs/usuarios/usuarios.page.html
@@ -7,6 +7,12 @@
         <ion-menu-button auto-hide="false"></ion-menu-button>
       </ion-buttons>
 
+      <ion-buttons slot="end">
+        <ion-button (click)="getUsuarios()" size="large">
+          <ion-icon slot="start" slot="icon-only" name="reload"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+
       <ion-title class="ion-text-center">Usuarios</ion-title>
     </ion-toolbar>
 
