Examen + chat y home responsive

--- a/src/app/pages/chatroom/chatroom.page.html
+++ b/src/app/pages/chatroom/chatroom.page.html
@@ -12,30 +12,30 @@
     <ion-row *ngFor="let message of messages">
       
     <!-- <div class="aaa"> -->
-      <ion-col class="ion-margin-start" size="5" *ngIf="message.author !== username" class="message">
+      <ion-col class="ion-margin-start" size-lg="6" size-xs="6" *ngIf="message.author !== username" class="message">
         <!-- <span class="user_name">{{ message.author}}:</span><br>
         <span>{{ message.mensaje }}</span>
         <div class="time">{{message.date | date:'dd.MM.yy hh:MM:yy'}}</div> -->
 
         <ion-card>
-        <ion-card-header>
-          <ion-card-subtitle> 
-          {{ message.author}}  -  {{message.date | date:'dd/MM/yy hh:MM:yy'}}
-          </ion-card-subtitle>
-          <!--ion-card-title>
-          {{ message.author}}
-          </ion-card-title-->     
-        </ion-card-header>
+          <ion-card-header>
+            <ion-card-subtitle> 
+            {{ message.author}}  -  {{message.date | date:'dd/MM/yy hh:MM:yy'}}
+            </ion-card-subtitle>
+            <!--ion-card-title>
+            {{ message.author}}
+            </ion-card-title-->     
+          </ion-card-header>
 
-        <ion-card-content id="textsize">
-          <strong>{{ message.mensaje }}</strong>
-        </ion-card-content>        
-      </ion-card>
+          <ion-card-content id="textsize">
+            <strong>{{ message.mensaje }}</strong>
+          </ion-card-content>        
+        </ion-card>
       </ion-col>
-   <!--  </div> <img [src]="this.ambiente.path + usuario.rutaimagen">-->
+   <!--  </div> <img [src]="this.ambiente.path + usuario.rutaimagen"> -->
 
    <!--  <div class="align-self-end" id="a"> -->
-      <ion-col offset-3 class="ion-margin-end" size="5" *ngIf="message.author === username" class="message" id="res">
+      <ion-col class="ion-margin-start" size-lg="6" size-xs="6" *ngIf="message.author === username" class="message" id="res">
         <!-- <span class="user_name">{{ username }}:</span><br>
         <span>{{ message.mensaje }}</span>
         <div class="time">{{message.date | date:'dd.MM hh:MM'}}</div> -->
@@ -66,12 +66,12 @@
 <ion-footer>
   <ion-toolbar>
     <ion-row class="message_row">
-      <ion-col size="11">
+      <ion-col size-lg="10" size-xs="10">
         <ion-item lines="none">
           <ion-input type="text" placeholder="Message" [(ngModel)]="message"></ion-input>
         </ion-item>
       </ion-col>
-      <ion-col size="1">
+      <ion-col ssize-lg="2" size-xs="2">
         <ion-button clear color="primary" (click)="sendMessage(message)" [disabled]="message === ''">&#10146;</ion-button>
       </ion-col>
     </ion-row>
