--- a/src/app/pages/chatroom/chatroom.page.scss
+++ b/src/app/pages/chatroom/chatroom.page.scss
@@ -34,8 +34,8 @@ page-chat-room {
 
 } */
 #res{
-    margin-right: 0px;
-    margin-left: 500px;
+    margin-right: 0%;
+    margin-left: 50%;
     float: right;
 
 }
