--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,8 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-
+<!-- <ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-header>
       <ion-row class="ion-justify-content-center">
@@ -20,7 +19,7 @@
     <ion-card-content>
 
       <ion-button expand="block" color="secondary" (click)=goLogin()>Acceder</ion-button>
-      <ion-button expand="block" color="secondary" (click)=goRegister()>Crear una cuenta</ion-button>
+      <ion-button expand="block" color="secondary" (click)=goRegister()>Crear una cuenta</ion-button> -->
 
       <!--ion-row class="ion-justify-content-center">
         <ion-button class="button icon icon-left ion-finger-print" (click)=goLogin()>Login</ion-button>
@@ -29,10 +28,10 @@
         <ion-button class="button icon icon-left ion-create" (click)=goRegister()>Register</ion-button>
       </ion-row-->
 
-    </ion-card-content>
+  <!--   </ion-card-content>
   </ion-card>
 
-</ion-content>
+</ion-content> -->
 
 <!-- <div class="container">
   <h1>Home</h1>
@@ -44,4 +43,27 @@
               <button (click)=goRegister()>Register</button>
           </p>
       </a>
-</div> -->
+</div>  -->
+
+
+<ion-content class="ion-padding">   
+  <ion-card id="card">
+    <ion-card-header>
+      <ion-row class="ion-justify-content-center">
+        <img src="../../../assets/Tenis Ball Icon.png"/>
+      </ion-row>
+      <ion-card-title>Rackets4All</ion-card-title>
+      <ion-card-subtitle>¿Tienes una cuenta de Facebook? Puedes acceder a Rackets4All con ella</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+      <ion-button expand="block" color="secondary" (click)=goLogin()>Acceder</ion-button>
+      <ion-button expand="block" color="secondary" (click)=goRegister()>Crear una cuenta</ion-button>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+
+
+
+
