--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,4 +1,4 @@
-.log {
+/* .log {
   color: #7e57ff;
   margin-right: 5%;
   margin-left:5%;
@@ -36,4 +36,89 @@ ion-card {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+} */ 
+
+/* ion-card{
+ 
+  width: 60%;
+  margin-top: 30%;
+  justify-content: center;
+  margin-left: 20%;
+
 }
+
+#Login{
+  width: 100px;
+
+}
+
+#Register{
+  width: 100px;
+}
+
+.ion-padding{
+  --background: url('../../../assets/usta.jpg') no-repeat center/cover fixed;
+}
+ */
+/* #imagen{
+  margin-left: 15px;
+  margin-right: 15px;
+} */
+
+/* 
+ion-card-title{
+  display: center;
+  text-align: center;
+  align-items: center;
+} */
+
+
+.ion-padding{
+  --background: url('../../../assets/usta.jpg') no-repeat center/cover fixed;
+}
+/* 
+.body{
+  background: url('../../../assets/c12139b9-196e-4ee3-beb5-ce0438932898.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; 
+} */ 
+
+ion-card-title{
+  display: center;
+  align-self: center;
+  align-content: center;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 30px;  
+}
+ion-card-subtitle{
+  display: center;
+  align-self: center;
+  align-content: center;
+  text-align: center;}
+
+#card{
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+ion-input, select, textarea{
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 10px;
+  //margin-bottom: 10px;  
+  background-color: rgb(243, 238, 192);
+  //margin-top: 17px;
+  text-align: center;
+  margin-top: -10px;
+}
+
+
+
