--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -17,10 +17,60 @@
   </ion-header>
 
   <ion-content>
-    <pre *ngIf="auth.userProfile$ | async as profile">
-      <code>{{ profile | json }}</code>
-    </pre>
-<!-- <pre *ngIf="auth.authenticationState">
+    <div *ngIf="auth.userProfile$ | async as profile">
+      <!-- <code>{{ profile | json }}</code>
+      <label>aaaaaaaaaaaaaaaaaaaaaaaaaaa</label> -->
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>{{ profile.given_name }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-row>
+            <ion-col size="5" size-xs="12" size-sm="6" size-md="4" size-sm="2">
+              <ion-item lines="none">
+                <ion-avatar>
+                    <ion-img [src]="profile.picture"></ion-img>
+                </ion-avatar>
+              </ion-item>
+            </ion-col>
+            <ion-col size="6" size-xs="12" size-sm="6" size-md="6" size-sm="2">
+              <br>
+              <ion-item lines="none">
+                <label>
+                  Apellidos: {{profile.family_name}}
+                </label>
+              </ion-item>
+              <ion-item lines="none">
+                <label>
+                  Alias: {{profile.nickname}}
+                </label>
+              </ion-item>
+              <ion-item lines="none">
+                <label>
+                  Nombre completo: {{profile.name}}
+                </label>
+              </ion-item>
+              <ion-item lines="none">
+                <label>
+                  Gender: {{profile.gender}}
+                </label>
+              </ion-item> 
+              <ion-item lines="none">
+                <label>
+                  Edad: {{profile.edad}} {{profile.age}}
+                </label>
+              </ion-item> 
+              <ion-item lines="none">
+                <label>
+                  Correo: {{profile.email}}
+                </label>
+              </ion-item> 
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+    </div>
+<!-- <pre *ngIf="auth.authenticationState"  >
  -->
     <ion-row *ngIf="auth.authenticationState">
       <ion-col size="12">
@@ -93,5 +143,105 @@
     <!--  </pre> -->   
     <div id="mapid3" class="mapa"></div>
 
+  <ion-row>
+    <ion-col size="12">
+      <ion-card id="scroll">
+
+      
+        <ion-card-header>
+          <ion-card-title>Mis torneos finalizados</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-list>
+              <ion-item *ngFor = "let torneo of historialTorneos; let i = index">
+                <ion-label> 
+                  {{torneo.nombre}}
+                  <h1><ion-badge color="secondary">Organizado por {{torneo.organizador}}</ion-badge></h1>
+                  <ion-badge *ngIf="torneo.ganador==undefined" color="success">Abierto</ion-badge><ion-badge *ngIf="torneo.ganador!==undefined" color="danger">Finalizado</ion-badge>
+                  <ion-row>
+                    <ion-col>
+                      <ion-label>Precio de entrada: {{torneo.inscripcion}} €</ion-label>
+                      <ion-label>Premio: {{torneo.premio}}</ion-label>
+                    </ion-col>
+                    <ion-col class="ion-align-self-center">
+                      <ion-item lines="none">
+                        <ion-list id="listaganadores">
+                          <ion-chip outline id="medal">
+                            <ion-icon name="trophy"></ion-icon>    <!-- medal -->
+                            <ion-label>Ganador: {{ganadores[i]}}</ion-label>
+                          </ion-chip>
+                        </ion-list>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                  <ion-chip outline color="secondary">
+                    <ion-label *ngIf="torneo.modo == 'i'">Individuales</ion-label>
+                    <ion-label *ngIf="torneo.modo == 'd'">Dobles</ion-label>
+                  </ion-chip>
+                  <ion-chip outline color="tertiary">
+                    <ion-label *ngIf="torneo.genero == 'm'">Masculino</ion-label>
+                    <ion-label *ngIf="torneo.genero == 'f'">Femenino</ion-label>
+                  </ion-chip>
+                  <ion-chip outline color="primary">
+                    <ion-label *ngIf="torneo.pistacubierta == true">Pista Cubierta</ion-label>
+                    <ion-label *ngIf="torneo.pistacubierta == false">Pista Descubierta</ion-label>
+                  </ion-chip>
+                  <ion-chip outline color="success">
+                    <ion-label>{{torneo.tipopista}}</ion-label>
+                  </ion-chip>
+                  <ion-chip outline color="warning">
+                    <ion-label>Bola: {{torneo.tipobola}}</ion-label>
+                  </ion-chip>
+                  <ion-chip outline color="danger">
+                    <ion-label>{{torneo.participantes.length}} Participantes</ion-label>
+                  </ion-chip>
+                  <br>
+                  <b>{{torneo.descripcion}}</b>
+                  <p>{{torneo.ubicacion}}</p>
+                </ion-label>
+                
+                  <!--   ndex as i; first as isFirst -->              
+                       <!-- {{i}}/{{ganadores.length-1}} --> 
+                   
+                  <!-- <label>
+                    Ganador:{{winner}}
+                  </label> -->
+                  <!-- <ion-item lines="none">
+                    <ion-list>
+                      <ion-chip outline id="medal">
+                        <ion-icon name="medal"></ion-icon>
+                        <ion-label>Ganador: {{ganadores[i]}}</ion-label>
+                      </ion-chip>
+                    </ion-list>
+                  </ion-item>    -->                
+
+              </ion-item>
+              
+              <!-- <ion-item>
+                <ion-list> 
+                  <li *ngFor = "let winner of ganadores; let i = index">
+                      {{winner}}
+                  </li>
+                </ion-list>  
+              </ion-item> -->
+          </ion-list> 
+          <!-- <ion-item *ngFor = "let winner of ganadores">
+            <label>
+              {{winner}}
+            </label>
+        </ion-item> -->
+        <!-- <ion-list>
+          <li *ngFor="let user of ganadores; index as i;">
+            <p *ngIf="i==0;">
+              <ion-row>
+              {{i}}. {{user}}
+              </ion-row>
+            </p>
+          </li>
+        </ion-list> -->
+        </ion-card-content>
+      </ion-card>
+      </ion-col>
+    </ion-row>
   </ion-content>
 </ion-app>
