--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -14,8 +14,8 @@ ion-avatar{
     display: flex;
     margin:0 auto; 
     vertical-align: middle;
-    margin-top: 32px;
-   
+    /* margin-top: 32px; */
+    margin-top:13px   
 }
 ion-card-content{
     background-color: white;
@@ -32,14 +32,32 @@ ion-item{
 .ion-avatar{
     display: flex;
     align-items: center;  
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 #mapid3{
 
     height: 50%;
-    //width: 97%;
+    //width: 97%; 
     display: flex;
     /* left: 50%; */
     margin-left: 17px;
     margin-right: 17px;
-    
+}
+
+/* #scroll{
+    height: 40%;
+    overflow-y: scroll;
+    965e1e
+    7d4e19
+} */
+
+#medal{
+    color:#7d4e19;
+    background-color: #FFD700;
+    background: #FFD700;
+}
+#listaganadores{
+    margin-left: 20%; 
 }
