--- a/src/app/pages/chart/chart.page.html
+++ b/src/app/pages/chart/chart.page.html
@@ -1,43 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>chart</ion-title>
+    <ion-title>Estadísticas globales</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="item">
-  <h4><p>Eje x: partidos jugados; </p></h4>
-  <h4><p>Eje y: torneos jugados; </p></h4>
-  <h4><p>Tamaño del bubble: experciencia acumulada </p></h4>
+  <h5><p>*Tamaño del bubble: experciencia acumulada </p></h5>
+  <h4><p>Colocate encima de cada bubble para ver los datos </p></h4>
   </div>
-  <!-- <div>
-    <ion-button (click) = "DrawPieChart()">Pie Cgart</ion-button>
-  </div> -->
   <div id="bubbleChart" style="width: 900px; height: 500px;"></div>
-
-
-
-  <!-- <div>
-    <div style="display: block">
-      <canvas baseChart
-              [datasets]="barChartData"
-              [labels]="barChartLabels"
-              [options]="barChartOptions"
-              [legend]="barChartLegend"
-              [chartType]="barChartType">
-      </canvas>
-    </div>
-  </div> -->
-
-
-  <!-- <ion-card class="welcome-card">
-    <ion-card-header>
-      <ion-card-subtitle>Simple Column Chart</ion-card-subtitle>
-      <ion-card-title>Population of Largest U.S. Cities</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <google-chart [data]="columnChart1"></google-chart>
-    </ion-card-content>
-  </ion-card> -->
 
 </ion-content>
